contentchanges: index html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Çelikoğulları Sebze & Meyve | Toptan ve Perakende Satış</title>
-    <meta name="description" content="Manavgat'ın en taze sebze ve meyve toptancısı. Otel ve işletmelere özel günlük teslimat." />
+    <title>SEKME BAŞLIĞI</title>
+    <meta name="description" content="META AÇIKLAMASI" />
     
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
