--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="fixed w-full z-50 top-0 start-0 bg-surface/90 backdrop-blur-md border-b border-gray-200 transition-all duration-300">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="/src/assets/logo.png" alt="Logo" class="h-10" />
+            <span id="brand-name" class="self-center text-2xl font-bold whitespace-nowrap text-primary"></span>
         </a>
         
         <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-text-muted rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
@@ -67,10 +67,30 @@
           <div>
             <h2 id="contact-title" class="text-3xl font-bold tracking-tight text-text-main sm:text-4xl mb-6"></h2>
             <p id="contact-subtitle" class="text-lg text-text-muted mb-10"></p>
+            
             <dl class="space-y-6 text-base text-text-main">
-              <div class="flex items-start"><span class="text-2xl mr-4">📍</span><dd id="contact-address" class="flex-1"></dd></div>
-              <div class="flex items-center"><span class="text-2xl mr-4">📞</span><dd id="contact-phone" class="font-semibold text-primary"></dd></div>
-              <div class="flex items-center"><span class="text-2xl mr-4">✉️</span><dd id="contact-email"></dd></div>
+              <div class="flex items-start">
+                <span class="text-2xl mr-4">📍</span>
+                <dd id="contact-address" class="flex-1"></dd>
+              </div>
+              <div class="flex items-center">
+                <span class="text-2xl mr-4">📞</span>
+                <dd id="contact-phone" class="font-semibold text-primary"></dd>
+              </div>
+              <div class="flex items-center">
+                <span class="text-2xl mr-4">✉️</span>
+                <dd id="contact-email"></dd>
+              </div>
+              <div class="flex items-start">
+                <span class="text-2xl mr-4">🕒</span>
+                <div>
+                  <dt id="hours-title" class="font-semibold text-text-main mb-1"></dt> 
+                  <dd class="text-text-muted">
+                    <span id="hours-weekdays" class="block"></span>
+                    <span id="hours-weekend" class="block"></span>
+                  </dd>
+                </div>
+              </div>
             </dl>
           </div>
           <div class="relative h-96 w-full rounded-2xl overflow-hidden shadow-xl border-4 border-white">
@@ -83,7 +103,7 @@
     <footer class="bg-surface border-t border-gray-100 mt-auto">
       <div class="mx-auto w-full max-w-screen-xl p-4 py-8 text-center sm:text-left sm:flex sm:justify-between">
         <span class="text-sm text-text-muted">
-          © <span id="current-year">2026</span> <span id="footer-brand" class="font-semibold text-primary"></span>. Tüm Hakları Saklıdır.
+          © <span id="current-year"></span> <span id="footer-brand" class="font-semibold text-primary"></span>. Tüm Hakları Saklıdır.
         </span>
       </div>
     </footer>
