update: navbar optimization

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       </div>
     </nav>
 
-    <section id="hero" class="relative mt-[73px] py-20 lg:py-32 overflow-hidden min-h-[calc(100vh-73px)] flex items-center bg-cover bg-center" style="background-image: url('/src/assets/background.webp');">
+    <section id="hero" class="relative mt-20 py-20 lg:py-32 overflow-hidden min-h-[calc(100vh-5rem)] flex items-center bg-cover bg-top" style="background-image: url('/src/assets/background.webp');">
       
-      <div class="absolute inset-0 bg-gray-900/70 z-0"></div>
+      <div class="absolute inset-0 bg-gray-900/60 z-0"></div>
 
       <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8 relative z-10 w-full">
         <div class="max-w-3xl mx-auto text-center">
