--- a/index.html
+++ b/index.html
@@ -17,34 +17,42 @@
             <span id="brand-name" class="self-center text-2xl font-bold whitespace-nowrap text-primary hidden sm:block"></span>
         </a>
         
-        <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-text-muted rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
-            <span class="sr-only">Menüyü Aç</span>
-            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-            </svg>
-        </button>
+        <div class="flex items-center gap-3 md:order-2">
+            <div class="flex items-center gap-2 mr-2">
+                <button onclick="changeLanguage('tr')" class="text-sm font-semibold text-text-main hover:text-primary transition-colors focus:outline-none">TR</button>
+                <span class="text-gray-300 text-sm">|</span>
+                <button onclick="changeLanguage('en')" class="text-sm font-semibold text-text-muted hover:text-primary transition-colors focus:outline-none">EN</button>
+            </div>
 
-        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+            <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-text-muted rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
+                <span class="sr-only">Menüyü Aç</span>
+                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+                </svg>
+            </button>
+        </div>
+
+        <div class="hidden w-full md:block md:w-auto md:order-1" id="navbar-default">
           <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-background md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-transparent">
-            <li><a href="#hero" class="block py-2 px-3 text-white bg-primary rounded md:bg-transparent md:text-primary md:p-0">Ana Sayfa</a></li>
-            <li><a href="#services" class="block py-2 px-3 text-text-main rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary md:p-0">Hizmetler</a></li>
-            <li><a href="#contact" class="block py-2 px-3 text-text-main rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary md:p-0">İletişim</a></li>
+            <li><a id="nav-home" href="#hero" class="block py-2 px-3 text-white bg-primary rounded md:bg-transparent md:text-primary md:p-0">Ana Sayfa</a></li>
+            <li><a id="nav-services" href="#services" class="block py-2 px-3 text-text-main rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary md:p-0">Hizmetler</a></li>
+            <li><a id="nav-contact" href="#contact" class="block py-2 px-3 text-text-main rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary md:p-0">İletişim</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
     <section id="hero" class="relative mt-20 py-20 lg:py-32 overflow-hidden min-h-[calc(100vh-5rem)] flex items-center bg-cover bg-top" style="background-image: url('/src/assets/background.webp');">
-      
       <div class="absolute inset-0 bg-gray-900/60 z-0"></div>
-
       <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8 relative z-10 w-full">
         <div class="max-w-3xl mx-auto text-center">
           <h1 id="hero-title" class="text-4xl font-extrabold tracking-tight text-white sm:text-6xl animate-fade-in opacity-0" style="animation-delay: 0.1s;"></h1>
           <p id="hero-subtitle" class="mt-6 text-lg leading-8 text-gray-200 animate-fade-in opacity-0" style="animation-delay: 0.3s;"></p>
           <div class="mt-10 flex items-center justify-center gap-x-6 animate-fade-in opacity-0" style="animation-delay: 0.5s;">
             <a id="hero-cta" href="#" class="rounded-md bg-primary px-3.5 py-2.5 text-sm font-semibold text-white shadow-lg shadow-primary/30 hover:bg-secondary transition-all transform hover:-translate-y-1"></a>
-            <a href="#contact" class="text-sm font-semibold leading-6 text-white hover:text-primary transition-colors">Bize Ulaşın <span aria-hidden="true">→</span></a>
+            <a href="#contact" class="text-sm font-semibold leading-6 text-white hover:text-primary transition-colors">
+              <span id="hero-contact-text">Bize Ulaşın</span> <span aria-hidden="true">→</span>
+            </a>
           </div>
         </div>
       </div>
@@ -97,7 +105,7 @@
     <footer class="bg-surface border-t border-gray-100 mt-auto">
       <div class="mx-auto w-full max-w-screen-xl p-4 py-8 text-center sm:text-left sm:flex sm:justify-between">
         <span class="text-sm text-text-muted">
-          © <span id="current-year"></span> <span id="footer-brand" class="font-semibold text-primary"></span>. Tüm Hakları Saklıdır.
+          © <span id="current-year"></span> <span id="footer-brand" class="font-semibold text-primary"></span>. <span id="footer-rights">Tüm Hakları Saklıdır.</span>
         </span>
       </div>
     </footer>
