feat:added russian

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <button onclick="changeLanguage('tr')" class="text-sm font-semibold text-text-main hover:text-primary transition-colors focus:outline-none">TR</button>
                 <span class="text-gray-300 text-sm">|</span>
                 <button onclick="changeLanguage('en')" class="text-sm font-semibold text-text-muted hover:text-primary transition-colors focus:outline-none">EN</button>
+                <span class="text-gray-300 text-sm">|</span>
+                <button onclick="changeLanguage('ru')" class="text-sm font-semibold text-text-muted hover:text-primary transition-colors focus:outline-none">RU</button>
             </div>
 
             <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-text-muted rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
